--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Off to the races</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <center>
-      <h1>Off to the Races 🏁</h1>
-    </center>
+    <header>
+      <center>
+        <h1>Off to the Races 🏁</h1>
+      </center>
+    </header>
   <hr>
 
-  <div id=parties_contaner>
-  </div>
+  <main>
+
+    <div id=parties_contaner>
+    </div>
 
 <!-- <center>
 <h2>Candidates table</h2>
@@ -23,8 +28,7 @@
   <tr>
 </table>
 </center> -->
-
-
+  </main>
 
   <script src="src/party.js" charset="utf-8"></script>
   <script src="src/value.js" charset="utf-8"></script>
