--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,31 +3,59 @@
   <head>
     <meta charset="utf-8">
     <title>Off to the races</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- Semantic UI: -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
+
+    <!-- <link rel="stylesheet" href="styles.css"> -->
   </head>
   <body>
-    <header>
-      <center>
-        <h1>Off to the Races 🏁</h1>
-      </center>
-    </header>
+
+    <h2 class="ui header">
+      <img class="ui image" src="images/noun_uncle sam's hat_1112674.svg">
+      <div class="content">
+        Off to the Races
+      </div>
+    </h2>
+  <br>
   <hr>
+  <br>
 
   <main>
 
-    <div id=parties_contaner>
+    <div id='parties_contaner' class='ui two column grid' >
     </div>
 
-<!-- <center>
-<h2>Candidates table</h2>
-<table id="candidates_table">
-  <tr>
-    <th>Name</th>
-    <th>Tag Line</th>
-    <th>Party</th>
-  <tr>
-</table>
-</center> -->
+    <div id='oneParty_container'>
+      <div id='partydetails'>
+        <h3 id='partyName'></h3>
+        <img id='partyImage' height='350'>
+        <table class='ui table' id='candidateValuesTable'>
+        <!-- append <thead> -->
+          <!-- append <tr> -->
+            <!-- append <th></th> -->
+            <!-- append <th>Flag Respect</th> -->
+            <!-- append <th>Family</th> -->
+            <!-- append <th>Environment</th> -->
+            <!-- append <th>Economy</th> -->
+          <!-- </th> -->
+        <!-- </thead> -->
+        <!-- append <tbody> -->
+          <!-- append <tr>this row will contain everything out of Candidate.renderCandidates()</tr> -->
+        <!-- </tbody> -->
+      </table>
+    </div>
+  </div>
+
+
+    <div id='candidate_form' class='ui form'>
+    </div>
+
+    <div id='oneParty_container'>
+    </div>
+
   </main>
 
   <script src="src/party.js" charset="utf-8"></script>
