party render page has been updated with plank spot for a chart to show average values

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,22 +46,19 @@
         <br>
 
     <main id="main">
-
       <div id='parties_contaner' class='ui two column grid' >
       </div>
-
       <div id='oneParty_container'>
         <div id='partydetails'>
+        <div id=partyAndForm>
+        </div>
           <div id='candidate_form' class='ui form'>
-            <h3 id='partyName'></h3>
-              <img id='partyImage' height='200'>
             <table class='ui table' id='candidateValuesTable'>
             </table>
           </div>
         </div>
       </div>
     </div>
-
     </main>
 
 
