averages now showing correctly on party page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,13 +27,6 @@
         </a>
       </div>
     </div>
-    <!-- <h4 id="partiesHeader">Select a party page:</h4> -->
-    <!-- <div id='newCandidateBtn'>
-      <button id='newCandidate' class='ui basic button'>
-        Add New Candidate
-      </button>
-    </div> -->
-
     <div class="ui main text container">
         <br>
         <br>
@@ -46,8 +39,9 @@
         <br>
 
     <main id="main">
-      <div id='parties_contaner' class='ui two column grid' >
+      <div id='parties_contaner' class='ui two column padded grid' >
       </div>
+      <br>
       <div id='oneParty_container'>
         <div id='partydetails'>
         <div id=partyAndForm>
