With moments to spare before the presentation, everything basically works

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
         <br>
 
     <main id="main">
-      <div id='parties_contaner' class='ui two column padded grid' >
+      <div id='parties_contaner' class='ui three column padded grid' >
       </div>
       <br>
       <div id='oneParty_container'>
